# ansible-collection-icinga-director

./: .aar_doc.yml  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  README.md  codecov.yml  galaxy.yml  inventory.icinga_director_inventory.yaml  pyproject.toml  renovate.json  test-requirements.txt  tox.ini
.github/: release-drafter.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
docs/: example_playbooks.rst  icinga_command.rst  icinga_command_info.rst  icinga_command_template.rst  icinga_command_template_info.rst  icinga_dependency_apply.rst  icinga_dependency_template.rst  icinga_deploy.rst  icinga_deploy_info.rst  icinga_director_inventory.rst  icinga_endpoint.rst  icinga_endpoint_info.rst  icinga_host.rst  icinga_host_info.rst  icinga_host_template.rst  icinga_host_template_info.rst  icinga_hostgroup.rst  icinga_hostgroup_info.rst  icinga_notification.rst  icinga_notification_info.rst  icinga_notification_template.rst  icinga_notification_template_info.rst  icinga_scheduled_downtime.rst  icinga_service.rst  icinga_service_apply.rst  icinga_service_apply_info.rst  icinga_service_info.rst  icinga_service_template.rst  icinga_service_template_info.rst  icinga_servicegroup.rst  icinga_servicegroup_info.rst  icinga_serviceset.rst  icinga_timeperiod.rst  icinga_timeperiod_info.rst  icinga_timeperiod_template.rst  icinga_timeperiod_template_info.rst  icinga_user.rst  icinga_user_group.rst  icinga_user_group_info.rst  icinga_user_info.rst  (+4 more)
examples/: icinga_command.yml  icinga_command_info.yml  icinga_deploy.yml  (+47 more)
(+429 files in other folders)
