[project]
name = "tmpf9zl286e"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.ruff.isort]
known-first-party = ["tmpf9zl286e"]

[tool.black]
line-length = 88
